2003-09-22  JP Rosevear <jpr@ximian.com>

	* gui/e-day-view.c (e_day_view_on_editing_stopped): create the
	object if its not on the server or modify it if it is

	* gui/e-week-view.c (e_week_view_on_editing_stopped): we return if
	there is no text and it *not* on the server

2003-09-22  JP Rosevear <jpr@ximian.com>

	* gui/e-week-view.c (e_week_view_on_editing_stopped): create the
	object if its not on the server or modify it if it is

2003-09-22  JP Rosevear <jpr@ximian.com>

	* gui/gnome-cal.h: remove proto

	* gui/gnome-cal.c: remove gnome_calendar_unrecur_selection

	* gui/e-week-view.h: remove proto

	* gui/e-week-view.c: remove e_week_view_unrecur_appointment

	* gui/e-day-view.h: remove proto

	* gui/e-day-view.c: remove e_day_view_unrecur_appointment

	* gui/e-cal-view.c: remove on_unrecur_appointment (this is handled
	better via recurrence id's now)

2003-09-22  JP Rosevear <jpr@ximian.com>

	* gui/e-itip-control.c (update_attendee_status): ifdef out, leave
	temporarily for reference, but otherwise it shouldn't be needed
	(update_item): switch to using receive objects
	(ok_clicked_cb): update item when receiving a reply

	* gui/e-calendar-table.c (selection_received): switch to using
	create object from update_objects

	* gui/e-cal-view.c (selection_received_add_event): util routine to
	prevent duplication
	(selection_received): use above

	* gui/e-cal-model.c (ecm_set_value_at): switch to using modify
	object from update_objects
	(ecm_append_row): switch to using create object from
	update_objects

	* gui/e-cal-model-calendar.c (ecmc_set_value_at): switch to using
	modify object from update_objects

	* gui/e-cal-model-tasks.c (ecmt_set_value_at): ditto
	
2003-09-19  Rodrigo Moya <rodrigo@ximian.com>

	* idl/evolution-calendar.idl: removed getAlarmsInRange and
	getAlarmsForObject methods.

	* pcs/cal.c (impl_Cal_getAlarmsInRange, impl_Cal_getAlarmsForObject):
	removed unneeded CORBA methods.
	(cal_class_init): dont set removed methods in the epv.
